# rpax

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL-TESTPYPI.md  INTEGRATION_PLAN.md  LICENSE  Makefile  README.md  TODO.md  llm.txt  motd.json  pyproject.toml  test_activity_properties.py  test_curated_corpus.py  test_golden_freeze.py  test_object_repo_direct.py  test_object_repo_output.json  test_output_clicklistofcharacters.json  test_output_purposeful_promethium_main.json  test_schema_validation.py  test_simple_schema_validation.py  test_xaml_parser.py
.github/workflows/: null-op.yml
.rpax-artifacts-test/: projects.json
.rpax-artifacts-test/c25v001-core-0000000-bf765bb992/: call-graph.json  invocations.jsonl  manifest.json  workflows.index.json
.rpax-artifacts-test/c25v001-core-0000000-bf765bb992/activities.tree/: myEntrypointOne.json  myEntrypointTwo.json
.rpax-artifacts-test/c25v001-core-0000000-bf765bb992/expanded-pseudocode/: InitAllSettings.expanded.json  index.json  myEmptyWOrkflow.expanded.json  myEntrypointOne.expanded.json  myEntrypointTwo.expanded.json  myWorkflowFooBar.expanded.json
.rpax-artifacts-test/c25v001-core-0000000-bf765bb992/metrics/: myEntrypointOne.json  myEntrypointTwo.json
.rpax-artifacts-test/c25v001-core-0000000-bf765bb992/pseudocode/: index.json  myEntrypointOne.xaml.json  myEntrypointTwo.xaml.json
docs/: IMPLEMENTATION-PLAN-activity-entity.md  ISSUE-027_pseudocode-extension-plan.md  cli-reference.json  cli-reference.md  lake-data-model.md  personas.md
docs/adr/: ADR-0000-todo.md  ADR-000_adr-maintenance-lifecycle.md  ADR-001_parsing-xaml.md  ADR-002_layered-architecture.md  ADR-003_rpax-command-surface.md  ADR-004-config-file.md  ADR-005-graphing.md  ADR-006_project-json-parsing.md  ADR-007_parser-requirements.md  ADR-008_lenient-vs-strict-parsing.md  ADR-009_parser-artifacts.md  ADR-010_validation-layer.md  ADR-011_access-API.md  ADR-012_MCP-layer.md  ADR-013_diagram-elements.md  ADR-014_disambiguition.md  ADR-015_python-stack.md  ADR-016_packaging.md  ADR-017_data-lake-nomenclature.md  ADR-018_project-identity-trust.md  ADR-019_MCP-tool-canonical-return-type.md  ADR-020_known-dependencies-inclusion-in-project-resolution.md  ADR-021_CLI-commands-and-parameters-specification.md  ADR-022_minimal-rpax-access-api.md  ADR-023_recursive-pseudocode-generation.md  ADR-024_cli-api-exposure-decorators.md  ADR-025_IssueSaniBundle.md  ADR-026_delineation-vendor-user-IssueSaniBUndle.md  ADR-027_CLI-commands-IssueSaniBundle.md  ADR-028_local-dashboard.md  ADR-029_corpus-testing-terminology.md  ADR-030_path-separator-normalization.md  ADR-031.md  ADR-031_xaml-parsing-strategy.md  ADR-033_multi-project-lake-access.md  ADR-034_cli-package-structure-and-maturity-taxonomy.md
docs/api/: swagger-ui.html
docs/api/v0/: openapi.json  openapi.yaml  swagger-ui.html
docs/architecture/: dataflow-diagram-v0.0.1.gv  dataflow-diagram-v0.0.3.gv  dataflow.gv
docs/dashboard/: mockup.html
docs/dev-notes/: v0.0.1-development-history.md  v0.0.2-development.md  v0.0.3-development.md
docs/development/: code-navigation.md  path-taxonomy.md
docs/llm/context/: styleguide.md
docs/risks/: register.md
docs/roadmap/: feature-matrix.md  implementation-phases.md
docs/roadmap/backlog/: compose-artifacts.md  developer-onboarding.md
docs/roadmap/completed/: v0.0.1-foundation-mvp.md  v0.0.2-proof-of-concept.md
schemas/: invocation.schema.json  manifest.schema.json  workflow.schema.json  workflow_index.schema.json
scripts/: generate_cli_docs.py
src/rpax/: __init__.py  api.py  artifacts.py  cli.py  cli_integration.py  config.py  demo_integrated_cli.py  schema_validator.py  simple_schema_validator.py  versioning.py
src/rpax/cli/: __init__.py  decorators.py  main.py
src/rpax/diagnostics/: __init__.py  error_collector.py
src/rpax/explain/: __init__.py  analyzer.py  formatter.py  portrait.py
src/rpax/graph/: __init__.py  callgraph_generator.py  framework.py  mermaid.py  models.py
src/rpax/models/: __init__.py  activity.py  callgraph.py  manifest.py  packages.py  project.py  workflow.py
src/rpax/output/: __init__.py  base.py  lake_index.py  warehouse_index.py
src/rpax/parser/: __init__.py  activity_package_resolver.py  activity_resource_generator.py  coded_workflow.py  container_info_parser.py  dependency_classifier.py  enhanced_xaml_analyzer.py  object_repository.py  (+5 more)
src/xaml_parser/: LICENSE  README.md  conftest.py  pyproject.toml
tests/: __init__.py  test_activity_extraction.py  test_activity_resource_generation.py  test_api.py  test_callgraph.py  test_dependency_classifier.py  test_enhanced_xaml_gist_validation.py  test_frozenchlorine.py  test_namespace_analyzer.py  test_path_normalization.py  test_purposeful_promethium.py  test_recursive_pseudocode.py  test_regression.py  test_v0_integration.py  test_v0_schema.py
tests/integration/: __init__.py  test_activity_resource_integration.py  test_real_projects.py
tests/performance/: test_simple_benchmarks.py
tests/resources/: test_uri_resolver.py
tests/unit/: __init__.py  test_activities_cli.py  test_activity_models.py  test_bay_portrait.py  test_clear_cli.py  test_cli_project_path.py  test_config.py  test_enhanced_parser.py  test_list_roots_artifacts.py  test_multi_project.py  test_multi_project_cli.py  test_project_parser.py  test_pseudocode.py  test_slug_sanitization.py  test_versioning.py  test_xaml_discovery.py
tools/: generate_openapi.py  serve_api_docs.py
(+55 files in other folders)
